unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/NU_ADV_Prospect_Research_Rating__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_Prospect_Research_Rating__c</fullName>
    <label>Capacity Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. $100 million+</fullName>
            </value>
            <value>
                <fullName>2. $50,000,000-99,999,999</fullName>
            </value>
            <value>
                <fullName>3. $25,000,000-49,999,999</fullName>
            </value>
            <value>
                <fullName>4. $10,000,000-24,999,999</fullName>
            </value>
            <value>
                <fullName>5. $5,000,000-9,999,999</fullName>
            </value>
            <value>
                <fullName>6. $3,000,000-4,999,999</fullName>
            </value>
            <value>
                <fullName>7. $1,000,000-2,999,999</fullName>
            </value>
            <value>
                <fullName>8. $500,000-999,999</fullName>
            </value>
            <value>
                <fullName>9. $250,000-499,999</fullName>
            </value>
            <value>
                <fullName>10. $100,000-249,999</fullName>
            </value>
            <value>
                <fullName>11. $50,000-99,999</fullName>
            </value>
            <value>
                <fullName>12. $25,000-49,999</fullName>
            </value>
            <value>
                <fullName>13. $10,000-24,999</fullName>
            </value>
            <value>
                <fullName>14. $1-9,999</fullName>
            </value>
            <value>
                <fullName>Not Rated</fullName>
            </value>
            <value>
                <fullName>Unable to rate</fullName>
            </value>
            <value>
                <fullName>1. $10 million +</fullName>
            </value>
            <value>
                <fullName>2. $1,000,000-9,999,999</fullName>
            </value>
            <value>
                <fullName>3. $500,000-999,999</fullName>
            </value>
            <value>
                <fullName>4. $250,000-499,999</fullName>
            </value>
            <value>
                <fullName>5. $100,000-249,999</fullName>
            </value>
            <value>
                <fullName>6. $50,000-99,999</fullName>
            </value>
            <value>
                <fullName>7. $25,000-49,999</fullName>
            </value>
            <value>
                <fullName>8. $10,000-24,999</fullName>
            </value>
            <value>
                <fullName>9. $2,500-9,999</fullName>
            </value>
            <value>
                <fullName>10. Less than $2,500</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>