unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/NU_ADV_Rating_or_Score_Type__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_Rating_or_Score_Type__c</fullName>
    <label>Rating Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect Research</fullName>
                <label>Research Rating</label>
            </value>
            <value>
                <fullName>Vendor Screening</fullName>
                <label>Vendor Rating</label>
            </value>
            <value>
                <fullName>Unverified</fullName>
            </value>
            <value>
                <fullName>Baseline</fullName>
            </value>
            <value>
                <fullName>Preliminary</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Point Scoring</fullName>
            </value>
            <value>
                <fullName>Giving Likelihood</fullName>
            </value>
            <value>
                <fullName>Predictive</fullName>
            </value>
            <value>
                <fullName>Segmentation</fullName>
            </value>
            <value>
                <fullName>EFC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>