unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/NU_ADV_Rating_Status__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_Rating_Status__c</fullName>
    <label>Rating Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baseline</fullName>
            </value>
            <value>
                <fullName>Preliminary</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
            <value>
                <fullName>Unverified</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
                <isActive>false</isActive>
                <label>Verified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>