unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Capacity_Source__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Capacity_Source__c</fullName>
    <label>Capacity Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZoomInfo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Dun and Bradstreet</fullName>
            </value>
            <value>
                <fullName>DatabaseUSA</fullName>
            </value>
            <value>
                <fullName>Donations</fullName>
            </value>
            <value>
                <fullName>Real Estate (US)</fullName>
            </value>
            <value>
                <fullName>Real Estate (CA)</fullName>
            </value>
            <value>
                <fullName>High Net Worth Individuals</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Insider Filings</fullName>
            </value>
            <value>
                <fullName>Political Giving (US)</fullName>
            </value>
            <value>
                <fullName>Political Giving (State)</fullName>
            </value>
            <value>
                <fullName>Political Giving (CA)</fullName>
            </value>
            <value>
                <fullName>Foundations (US)</fullName>
            </value>
            <value>
                <fullName>Foundations (CA)</fullName>
            </value>
            <value>
                <fullName>Matching Gifts</fullName>
            </value>
            <value>
                <fullName>Obituaries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>