unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Cultivation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Cultivation__c</fullName>
    <label>Cultivation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>