unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Estimated_Age_Range__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Estimated_Age_Range__c</fullName>
    <label>Estimated Age Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>