unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Giving_Velocity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Giving_Velocity__c</fullName>
    <label>Giving Velocity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accelerating</fullName>
            </value>
            <value>
                <fullName>Decelerating</fullName>
            </value>
            <value>
                <fullName>Steady</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>