unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Input_Stock_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Input_Stock_Total_Value__c</fullName>
    <label>Input Stock Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>