unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Kindsight_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Kindsight_Profile_Name__c</fullName>
    <label>Kindsight Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>