unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__O_E_Political_Donations__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__O_E_Political_Donations__c</fullName>
    <label>O/E Political Donations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>