unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__O_E_Real_Estate_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__O_E_Real_Estate_Value__c</fullName>
    <label>O/E Real Estate Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>