unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Operating_Entity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Operating_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Entity</label>
    <referenceTo>ucinn_ascendv2__Operating_Entity__c</referenceTo>
    <relationshipLabel>Wealth Ratings</relationshipLabel>
    <relationshipName>Wealth_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>