unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__Planned_Giving_Segment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Planned_Giving_Segment__c</fullName>
    <label>Planned Giving Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not a Planned Giver</fullName>
            </value>
            <value>
                <fullName>Potential Planned Giver</fullName>
            </value>
            <value>
                <fullName>Strong Planned Giving Prospect</fullName>
            </value>
            <value>
                <fullName>Ideal Planned Giver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>