unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/fields/ucinn_ascendv2__RFM_Monetary_Score__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__RFM_Monetary_Score__c</fullName>
    <label>RFM Monetary Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>