unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/recordTypes/NU_ADV_Annual_Giving_Ask_Details.recordType-meta.xml
<RecordType>
    <fullName>NU_ADV_Annual_Giving_Ask_Details</fullName>
    <active>true</active>
    <label>Annual Giving Ask Details</label>
</RecordType>