unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/recordTypes/NU_ADV_Model_Score.recordType-meta.xml
<RecordType>
    <fullName>NU_ADV_Model_Score</fullName>
    <active>true</active>
    <label>Model Score</label>
</RecordType>