unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/recordTypes/TVRating.recordType-meta.xml
<RecordType>
    <fullName>TVRating</fullName>
    <active>true</active>
    <description>lakisdjf</description>
    <label>TVRating</label>
</RecordType>