unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/recordTypes/ucinn_ascendv2__Kindsight.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Kindsight</fullName>
    <active>true</active>
    <label>Kindsight</label>
</RecordType>