unpackaged/main/default/objects/ucinn_ascendv2__Wealth_Rating__c/recordTypes/Vendor_Rating.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Rating</fullName>
    <active>true</active>
    <label>Vendor Rating</label>
</RecordType>